# FAHM_Project

./: .gitignore  README.md  decision_log.md  pyproject.toml
configs/: config.yaml  metropt.yaml
docs/: data_profile.md  domain_primer.md  eda_deep_dive.md  evaluation_baseline.md  progress_report.md  starting_session_workflow.md  workflow_mapping.md
notebooks/: 01_preprocessing(mixed-up).ipynb  01_preprocessing.ipynb  02_eda.ipynb  03_anomaly_context.ipynb
src/fahm/: analysis.py  plotting.py  preprocessing.py
src/fahm_project/: sanity.py
src/fahm_project/eda/: deep_dive.py
src/fahm_project/features/: cycle_features.py  resample.py  rolling_features.py
src/fahm_project/ingestion/: load_metropt.py  make_failure_windows.py  profile_data.py
src/modules/: preprocessing.py
