[tool.poetry]
name = "fahm-project"
version = "0.1.0"
description = ""
authors = ["Leonardo Romano <leonardojromano@gmail.com>"]
readme = "README.md"
packages = [{ include = "fahm_project", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
