[tool.poetry]
name = "fahm"
version = "0.1.0"
description = ""
authors = ["Leonardo Romano <leonardojromano@gmail.com>"]
readme = "README.md"
packages = [{ include = "fahm", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^3.0.3"
pyarrow = "^24.0.0"
matplotlib = "^3.11.0"
pyyaml = "^6.0.3"
tabulate = "^0.10.0"
scikit-learn = "^1.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
